# Kolo_cmake

./: kol_1_makefile_cmakefile.rar
kol_1_makefile_cmakefile/zadanie2/: Makefile
kol_1_makefile_cmakefile/zadanie4/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
