cmake_minimum_required(VERSION 3.10)
project(myProgram)
set(EXECUTABLE_OUTPUT_PATH "bin")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "lib")
include_directories("./include/")
ADD_LIBRARY( Student STATIC "src/Student.cpp")
link_directories(lib)
LINK_DIRECTORIES(/usr/local/lib)
add_executable(myProgram src/libtest.cpp)
target_link_libraries(myProgram Student)